--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/express": "^4.17.20",
     "axios": "^1.5.1",
     "express": "^4.18.2",
+    "request-ip": "^3.3.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/request-ip": "^0.0.41",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "eslint": "^8.52.0",
